changes too index and manifesto

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
 
     <!-- CLOSING -->
     <div class="quote">
-      Bitcoin is not the salvation of institutions.<br />
-      It is the opportunity for digital money to remain money for everyone.
+      Without Bitcoin, digital money becomes a tool of control.<br />
+      With Bitcoin, it remains money for everyone.
+
     </div>
 
+    <p><a href="manifesto.html">Read the Manifesto</a></p>
     <footer>
       <p>
         Freedom Protocols is an open project. The knowledge is free. The code is verifiable.
