--- a/manifesto.html
+++ b/manifesto.html
@@ -99,6 +99,7 @@
       Freedom is not guaranteed by intentions.<br />
       It is preserved by systems.
     </div>
+     <p><a href="index.html">Back to Home</a></p>
 
     <footer>
       <p>
